--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: android
-jdk: oraclejdk8
+jdk:
+  - oraclejdk8
 
 android:
   components:
   - tools
   - platform-tools
-  - build-tools-27.0.3
+  - build-tools-28.0.3
   - android-28
   - extra
   - addon
