--- a/sample/src/androidTest/AndroidManifest.xml
+++ b/sample/src/androidTest/AndroidManifest.xml
@@ -3,5 +3,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.qautomatron.kopi.sample">
 
-    <uses-sdk tools:overrideLibrary="android.support.test.uiautomator.v18"/>
+    <uses-sdk tools:overrideLibrary="android_libs.ub_uiautomator"/>
 </manifest>
