--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,12 @@ cache:
   - $HOME/.gradle/wrapper/
   - $HOME/.android/build-cache
 
+# Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
 script:
-  - ./gradlew build
+  - ./gradlew build connectedCheck
