--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: android
-jdk:
-- oraclejdk8
+jdk: oraclejdk8
 android:
   components:
   - tools
@@ -22,8 +21,7 @@ cache:
   - "$HOME/.gradle/wrapper/"
   - "$HOME/.android/build-cache"
 before_script:
-- echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c
-  100M
+- echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
 - emulator -avd test -no-audio -no-window &
 - android-wait-for-emulator
 - adb shell input keyevent 82 &
