--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ android:
   - tools
   - platform-tools
   - build-tools-30.0.3
-  - android-30
   - android-22
   - sys-img-armeabi-v7a-android-22
   - extra
@@ -15,6 +14,8 @@ android:
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+before_install:
+  - yes | sdkmanager "platforms;android-30"
 cache:
   directories:
   - "$HOME/.gradle/caches/"
