--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -6,6 +6,12 @@ plugins {
 
 android {
     compileSdkVersion 31
+
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
     defaultConfig {
         applicationId "com.qautomatron.sample"
         minSdkVersion 16
